--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
     	<div class="copyright">
     		@ Uoc Nguyen
     	</div>
-
+        <script type="text/javascript">
+            $(window).bind('mousewheel DOMMouseScroll', function(event){
+                if (event.originalEvent.wheelDelta > 0 || event.originalEvent.detail < 0) {
+                }
+                else {
+                    window.location.href="info.html";
+                }
+            });
+        </script>
     </div>
 </body>
 
