--- a/info.html
+++ b/info.html
@@ -75,7 +75,15 @@
     	<div class="copyright">
     		@ Uoc Nguyen
     	</div>
-		
+		<script type="text/javascript">
+            $(window).bind('mousewheel DOMMouseScroll', function(event){
+                if (event.originalEvent.wheelDelta > 0 || event.originalEvent.detail < 0) {
+                    window.location.href="index.html";
+                }
+                else {
+                }
+            });
+        </script>
 
     </div>
 </body>
