--- a/info.html
+++ b/info.html
@@ -71,7 +71,7 @@
 			
     		
     	</div>
-    	<div class="bottom">Trân trọng kính mời</div>
+    	<div class="bottom">Rất hân hạnh được đón tiếp!</div>
     	<div class="copyright">
     		@ Uoc Nguyen
     	</div>
