--- a/info.html
+++ b/info.html
@@ -62,7 +62,7 @@
 							Khu 01, TT Ninh Giang, Ninh Giang, Hải Dương
 						</div>
 						<div class="map">
-							<a href="https://www.google.com/maps/place/Ch%C3%B9a+Tranh,+%C4%90%E1%BB%93ng+T%C3%A2m,+Ninh+Giang,+H%E1%BA%A3i+D%C6%B0%C6%A1ng/@20.7352831,106.3934033,17z/data=!3m1!4b1!4m5!3m4!1s0x31358c4d6317ddcb:0x9d47ca3d131fe806!8m2!3d20.7352781!4d106.395592" class=""><span class="-ap icon-location5 icon"></span> Xem bản đồ</a>
+							<a href="https://www.google.com/maps/d/u/0/viewer?mid=1P_yA5kH2enaokuxSYh9uTFxFNswwgVO1&ll=20.736376100000015%2C106.39697039999999&z=17" class=""><span class="-ap icon-location5 icon"></span> Xem bản đồ</a>
 						</div>
 					</div>
 				</div>
