--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 if (event.originalEvent.wheelDelta > 0 || event.originalEvent.detail < 0) {
                 }
                 else {
-                    window.location.href="info.html";
+                    window.location.href="info";
                 }
             });
         </script>
