--- a/info.html
+++ b/info.html
@@ -78,7 +78,7 @@
 		<script type="text/javascript">
             $(window).bind('mousewheel DOMMouseScroll', function(event){
                 if (event.originalEvent.wheelDelta > 0 || event.originalEvent.detail < 0) {
-                    window.location.href="index.html";
+                    window.location.href="index";
                 }
                 else {
                 }
