--- a/infocom.html
+++ b/infocom.html
@@ -26,7 +26,7 @@
     	<div class="content-frontend">
     		<div class="head-info">
 	    		<div class="thank">Trân trọng kính mời</div>
-	    		<div class="txt">Tới dự bữa cơm thân mật, chung vui cùng gia đình chúng tôi</div>
+	    		<div class="info">Tới dự bữa cơm thân mật, chung vui cùng gia đình chúng tôi</div>
 	    		<div class="corner"><img src="images/corners.png" alt=""></div>
 	    	</div>
 
