--- a/info.html
+++ b/info.html
@@ -26,17 +26,31 @@
     	<div class="content-frontend">
     		<div class="head-info">
 	    		<div class="thank">Trân trọng kính mời</div>
-	    		<p class="info">Tới dự lễ thành hôn của hai chúng tôi</p>
 	    		<div class="corner"><img src="images/corners.png" alt=""></div>
 	    	</div>
 	    	<div class="username">
 				Nguyễn Văn Ước  <span class="icon"><img src="images/and.png"></span> Phan Thúy An
 			</div>
-			<div class="time-box">
-				<div class="txt">Vào hồi 13h30 Chủ Nhật ngày</div>
-				<div class="date">01.03.2020</div>
-				<div class="al">(Tức ngày 08/02 năm Canh Tý)</div>
+			<div class="row">
+				<div class="col-sm-6 col-xs-12">
+					<div class="time-box">
+
+	    				<p class="info">Tới dự bữa cơm thân mật</p>
+						<div class="txt"> Vào lúc 16h thứ 7 ngày</div>
+						<div class="date">29.02.2020</div>
+						<div class="al">(Tức ngày 07/02 năm Canh Tý)</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-xs-12">
+					<div class="time-box">
+						<p class="info">Tới dự lễ thành hôn của hai chúng tôi</p>
+						<div class="txt">Vào hồi 13h30 Chủ Nhật ngày</div>
+						<div class="date">01.03.2020</div>
+						<div class="al">(Tức ngày 08/02 năm Canh Tý)</div>
+					</div>
+				</div>
 			</div>
+			
 			<div class="avatar" style="background-image: url(images/info/anh.jpg);">
 				
 			</div>
