--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-6 col-xs-12">
-					<div class="time-box">
+					<div class="time-box" style="text-align: center;">
 
 	    				<p class="info">Tới dự bữa cơm thân mật</p>
 						<div class="txt"> Vào lúc 16h thứ 7 ngày</div>
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 				<div class="col-sm-6 col-xs-12">
-					<div class="time-box">
+					<div class="time-box"  style="text-align: center;">
 						<p class="info">Tới dự lễ thành hôn của hai chúng tôi</p>
 						<div class="txt">Vào hồi 13h30 Chủ Nhật ngày</div>
 						<div class="date">01.03.2020</div>
